# fullstack-rust-1

./: .dockerignore  .gitignore  Dockerfile
backend/: .gitignore  Cargo.toml  sqlx-data.json
backend/migrations/: 20221207171705_init.up.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/db/repositories/: mod.rs  task_repo.rs
backend/src/routes/: health.rs  mod.rs  task.rs
common/: Cargo.toml
common/src/models/: mod.rs  task.rs  user.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/components/: mod.rs  task_view.rs
frontend/static/css/: style.css
