[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
axum-extra = { version = "0.4.2", features = ["spa"] }
common = { path = "../common" }
dotenvy = "0.15.6"
log = "0.4.17"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "json",
  "uuid",
  "offline",
] }
tokio = { version = "1.23.0", features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "macros",
  "parking_lot",
] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = [
  "trace",
  "request-id",
  "cors",
  "catch-panic",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
  "std",
  "env-filter",
  "json",
] }
