[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
getrandom = { version = "0.2.8", features = ["js"] }
serde = { version = "1.0.149", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
uuid = { version = "1.2.2", features = ["v4", "wasm-bindgen"] }
